--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <!-- Protocolo Open Graph -->
   <!-- Favicon -->
   <!-- Fuente -->
-  <link href="https://fonts.cdnfonts.com/css/helvetica-255" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <title>Confecciones, diseños únicos | Andreita Confecciones</title>
   <!-- Estilos css -->
   <link rel="stylesheet" href="./css/main.css">
-
+  <!-- Boostrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
@@ -20,7 +23,7 @@
 		<nav>
 			<div class="cont-logo">
 				<a href="./index.html">
-					<img src="./assets/logo/logo-andreita-confecciones.webp" title="logo andreita confecciones" alt="logotipo del emprendimiento andreita confecciones">
+					<img src="./assets/logo/logo-andreita-confecciones.webp" title="Logo andreita confecciones" alt="Logotipo del emprendimiento andreita confecciones">
 				</a>
 			</div>
 			<div class="cont-menu">
@@ -32,7 +35,7 @@
         </ul>
       </div>
       <div class="cont-carrito">
-        <img src="./assets/carrito-compra/carrito-compra.webp" alt="">
+        <img src="./assets/carrito-compra/carrito-compra.webp" title="Icono carrito de compras" alt="Icono carrito de compras">
         <button class="menu-burguer" aria-label="Abrir menú de navegación">
           <span class="linea"></span>
           <span class="linea"></span>
@@ -41,6 +44,54 @@
       </div>
 		</nav>
 	</header>
+
+  <section class="cont-principal">
+    <div class="cont-producto">
+      <div class="cont-img">
+        <img src="./assets/productos/delantal-flores.webp" title="Delantal con diseño tropical" alt="Delantal con diseño tropical">
+      </div>
+      <div class="cont-texto">
+        <h1>Ofertas Especiales</h1>
+        <p>¡Tu mejor aliado en la cocina!</p>
+        <p>Delantal jardín tropical. Estilo vibrante en tu cocina con este delantal lleno de colores vibrantes y un diseño único.</p>
+        <button><a href="#">Más información</a></button>
+      </div>
+    </div>
+  </section>
+
+  <section class="cont-ofertas">
+    <div class="cont-prod-oferta">
+      <div class="cont-prod-img">
+        <img src="./assets/productos/scrunchies-dieciocheros.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
+        <div>
+          <h2>Scrunchies</h2>
+          <button><a href="#">Más información</a></button>
+        </div>
+      </div>
+      <div class="cont-prod-img">
+        <img src="./assets/productos/bandana-animalprint.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
+        <div>
+          <h2>Bandanas</h2>
+          <button><a href="#">Más información</a></button>
+        </div>
+      </div>
+      <div class="cont-prod-img">
+        <img src="./assets/productos/coquette-animalprint.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
+        <div>
+          <h2>Coquettes</h2>
+          <button><a href="#">Más información</a></button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="cont-productos">
+    <div>
+      
+    </div>
+  </section>
   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
