--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <title>Confecciones, diseños únicos | Andreita Confecciones</title>
-  <!-- Estilos css -->
-  <link rel="stylesheet" href="./css/main.css">
   <!-- Boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- Estilos css -->
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 
@@ -35,7 +36,7 @@
         </ul>
       </div>
       <div class="cont-carrito">
-        <img src="./assets/carrito-compra/carrito-compra.webp" title="Icono carrito de compras" alt="Icono carrito de compras">
+        <a href=""><i class="bi bi-cart-fill"></i></a>
         <button class="menu-burguer" aria-label="Abrir menú de navegación">
           <span class="linea"></span>
           <span class="linea"></span>
@@ -45,6 +46,7 @@
 		</nav>
 	</header>
 
+  <!-- Oferta principal -->
   <section class="cont-principal">
     <div class="cont-producto">
       <div class="cont-img">
@@ -54,42 +56,155 @@
         <h1>Ofertas Especiales</h1>
         <p>¡Tu mejor aliado en la cocina!</p>
         <p>Delantal jardín tropical. Estilo vibrante en tu cocina con este delantal lleno de colores vibrantes y un diseño único.</p>
-        <button><a href="#">Más información</a></button>
+        <a href="./index.html#cont-productos">Más información</a>
       </div>
     </div>
   </section>
 
+  <!-- Ofertas especiales -->
   <section class="cont-ofertas">
     <div class="cont-prod-oferta">
       <div class="cont-prod-img">
         <img src="./assets/productos/scrunchies-dieciocheros.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
         <div>
           <h2>Scrunchies</h2>
-          <button><a href="#">Más información</a></button>
+          <a href="#">Más información</a>
         </div>
       </div>
       <div class="cont-prod-img">
         <img src="./assets/productos/bandana-animalprint.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
         <div>
           <h2>Bandanas</h2>
-          <button><a href="#">Más información</a></button>
+          <a href="#">Más información</a>
         </div>
       </div>
       <div class="cont-prod-img">
         <img src="./assets/productos/coquette-animalprint.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
         <div>
           <h2>Coquettes</h2>
-          <button><a href="#">Más información</a></button>
+          <a href="#">Más información</a>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="cont-productos">
-    <div>
-      
+
+  <!-- Productos -->
+  <section class="cont-productos" id="cont-productos">
+    <div class="cont-productos-card">
+      <div class="productos-card">
+        <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        <div class="productos-card-texto">
+          <h2>Delantal</h2>
+          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+        </div>
+        <div class="productos-card-btn">
+          <button id="agregar-carrito">Agregar al carrito</button>
+        </div>
+      </div>
+      <div class="productos-card">
+        <div class="productos-card-img">
+          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        </div>
+        <div class="productos-card-texto">
+          <h2>Delantal</h2>
+          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+        </div>
+        <div class="productos-card-btn">
+          <button><a href="#">Agregar al carrito</a></button>
+        </div>
+      </div>
+      <div class="productos-card">
+        <div class="productos-card-img">
+          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        </div>
+        <div class="productos-card-texto">
+          <h2>Delantal</h2>
+          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+        </div>
+        <div class="productos-card-btn">
+          <button><a href="#">Agregar al carrito</a></button>
+        </div>
+      </div>
+      <div class="productos-card">
+        <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        <div class="productos-card-texto">
+          <h2>Delantal</h2>
+          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+        </div>
+        <div class="productos-card-btn">
+          <button><a href="#">Agregar al carrito</a></button>
+        </div>
+      </div>
+      <div class="productos-card">
+        <div class="productos-card-img">
+          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        </div>
+        <div class="productos-card-texto">
+          <h2>Delantal</h2>
+          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+        </div>
+        <div class="productos-card-btn">
+          <button><a href="#">Agregar al carrito</a></button>
+        </div>
+      </div>
+      <div class="productos-card">
+        <div class="productos-card-img">
+          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        </div>
+        <div class="productos-card-texto">
+          <h2>Delantal</h2>
+          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+        </div>
+        <div class="productos-card-btn">
+          <button><a href="#">Agregar al carrito</a></button>
+        </div>
+      </div>
     </div>
   </section>
+
+  <section id="modal-carrito" class="modal-carrito">
+    <div class="cont-carrito">
+      <span class="cerrar-carrito">&times;</span>
+      <h2>Carrito de compras</h2>
+      <ul id="items-carrito"></ul>
+      <p id="total">total: $0</p>
+      <button id="verificar">Finalizar compra</button>
+    </div>
+  </section>
+
+  <section id="modal-compra" class="modal-compra">
+    <div class="cont-compra">
+      <h2>!Compra Finalizada¡</h2>
+      <p>Gracias por tu compra.</p>
+      <button id="cerrar-compra">Cerrar</button>
+    </div>
+  </section>
+
+
+  <!-- Footer -->
+	<footer class="cont-footer">
+    <div class="cont-links">
+      <div class="cont-paginas">
+        <ul>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./pages/productos.html">Productos</a></li>
+          <li><a href="./pages/servicios.html">Servicios</a></li>
+          <li><a href="./pages/contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="cont-copy">
+        <p>&copy; 2024 Andreita confecciones.</p>
+        <p>Todos los derechos reservados.</p>
+        <p>Desarrollado por <a href="https://github.com/roydev-dw" target="_blank"><strong>roydev-dw</strong></a></p>
+      </div>
+      <div class="cont-media">
+        <a href="https://www.instagram.com/andreita.confecciones_/">Instagram</a>      
+        <a href="https://www.facebook.com/profile.php?id=100063741957314">Facebook</a>      
+        <a href="https://www.tiktok.com/@andreita.confecciones?_t=8ptPPDNYFDa&_r=1">TikTok</a>      
+      </div>
+    </div>
+	</footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="./js/main.js"></script>
