--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         </ul>
       </div>
       <div class="cont-carrito">
-        <a href=""><i class="bi bi-cart-fill"></i></a>
+        <a href="">
+          <i id="icono-carrito" class="bi bi-cart-fill"></i>
+          <span id="contador-carrito" class="contador-carrito">0</span>
+        </a>
         <button class="menu-burguer" aria-label="Abrir menú de navegación">
           <span class="linea"></span>
           <span class="linea"></span>
@@ -95,69 +98,67 @@
       <div class="productos-card">
         <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
         <div class="productos-card-texto">
-          <h2>Delantal</h2>
-          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <h2 class="nombre-producto">Delantal perritos y flores</h2>
+          <p class="descipcion-producto">¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <p class="precio-producto">$9990</p>
         </div>
         <div class="productos-card-btn">
-          <button id="agregar-carrito">Agregar al carrito</button>
-        </div>
-      </div>
-      <div class="productos-card">
-        <div class="productos-card-img">
-          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
-        </div>
-        <div class="productos-card-texto">
-          <h2>Delantal</h2>
-          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
-        </div>
-        <div class="productos-card-btn">
-          <button><a href="#">Agregar al carrito</a></button>
-        </div>
-      </div>
-      <div class="productos-card">
-        <div class="productos-card-img">
-          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
-        </div>
-        <div class="productos-card-texto">
-          <h2>Delantal</h2>
-          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
-        </div>
-        <div class="productos-card-btn">
-          <button><a href="#">Agregar al carrito</a></button>
+          <button class="agregar-carrito">Agregar al carrito</button>
         </div>
       </div>
       <div class="productos-card">
         <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
         <div class="productos-card-texto">
-          <h2>Delantal</h2>
-          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <h2 class="nombre-producto">Delantal perritos y flores</h2>
+          <p class="descipcion-producto">¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <p class="precio-producto">$9990</p>
         </div>
         <div class="productos-card-btn">
-          <button><a href="#">Agregar al carrito</a></button>
+          <button class="agregar-carrito">Agregar al carrito</button>
         </div>
       </div>
       <div class="productos-card">
-        <div class="productos-card-img">
-          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
-        </div>
+        <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
         <div class="productos-card-texto">
-          <h2>Delantal</h2>
-          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <h2 class="nombre-producto">Delantal perritos y flores</h2>
+          <p class="descipcion-producto">¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <p class="precio-producto">$9990</p>
         </div>
         <div class="productos-card-btn">
-          <button><a href="#">Agregar al carrito</a></button>
+          <button class="agregar-carrito">Agregar al carrito</button>
         </div>
       </div>
       <div class="productos-card">
-        <div class="productos-card-img">
-          <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
-        </div>
+        <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
         <div class="productos-card-texto">
-          <h2>Delantal</h2>
-          <p>¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <h2 class="nombre-producto">Delantal perritos y flores</h2>
+          <p class="descipcion-producto">¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <p class="precio-producto">$9990</p>
         </div>
         <div class="productos-card-btn">
-          <button><a href="#">Agregar al carrito</a></button>
+          <button class="agregar-carrito">Agregar al carrito</button>
+        </div>
+      </div>
+      <div class="productos-card">
+        <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        <div class="productos-card-texto">
+          <h2 class="nombre-producto">Delantal perritos y flores</h2>
+          <p class="descipcion-producto">¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <p class="precio-producto">$9990</p>
+        </div>
+        <div class="productos-card-btn">
+          <button class="agregar-carrito">Agregar al carrito</button>
+        </div>
+      </div>
+      <div class="productos-card">
+        <img src="./assets/productos/delantal-uno.webp" alt="Delantal con diseño de mascotas y flores">
+        <div class="productos-card-texto">
+          <h2 class="nombre-producto">Delantal perritos y flores</h2>
+          <p class="descipcion-producto">¡Combina estilo y ternura con este delantal de perritos y flores!</p>
+          <p class="precio-producto">$9990</p>
+        </div>
+        <div class="productos-card-btn">
+          <button class="agregar-carrito">Agregar al carrito</button>
         </div>
       </div>
     </div>
@@ -165,8 +166,10 @@
 
   <section id="modal-carrito" class="modal-carrito">
     <div class="cont-carrito">
-      <span class="cerrar-carrito">&times;</span>
-      <h2>Carrito de compras</h2>
+      <div class="cont-cerrar-carrito">
+        <h2>Carrito de compras</h2>
+        <span id="cerrar-carrito" class="cerrar-carrito">&times;</span>
+      </div>
       <ul id="items-carrito"></ul>
       <p id="total">total: $0</p>
       <button id="verificar">Finalizar compra</button>
@@ -175,8 +178,8 @@
 
   <section id="modal-compra" class="modal-compra">
     <div class="cont-compra">
-      <h2>!Compra Finalizada¡</h2>
-      <p>Gracias por tu compra.</p>
+      <h2>Su compra a finalizado con exito</h2>
+      <p>Esperamos verte pronto. Gracias por tu compra.</p>
       <button id="cerrar-compra">Cerrar</button>
     </div>
   </section>
