--- a/index.html
+++ b/index.html
@@ -184,6 +184,20 @@
     </div>
   </section>
 
+  <section id="modal-agregado-carrito" class="modal-agregado-carrito">
+    <div class="modal-contenido-carrito">
+      <i class="bi bi-check-circle-fill"></i>
+      <p>Agregado al carrito.</p>
+    </div>
+  </section>
+  
+
+  <section id="modal-suscripcion" class="modal-suscripcion">
+    <div class="modal-contenido">
+      <i class="bi bi-send-check-fill"></i>
+      <p>Suscripción exitosa.</p>
+    </div>
+  </section>
 
   <!-- Footer -->
 	<footer class="cont-footer">
@@ -197,8 +211,15 @@
         </ul>
       </div>
       <div class="cont-copy">
-        <p>&copy; 2024 Andreita confecciones.</p>
-        <p>Todos los derechos reservados.</p>
+        <p>&copy; 2024 Andreita confecciones. Todos los derechos reservados.</p>
+        <form action="" class="formulario-noticias">
+          <p>Recibe nuestro boletin informativo, con noticias, descuentos, tips y demás.</p>
+          <div class="cont-entrada">
+            <i class="bi bi-envelope-at-fill"></i>
+            <input type="email" name="" value="" placeholder="Ingresa tu correo electrónico" required>
+            <button type="submit" name="boton">Suscríbete</button>
+          </div>
+        </form>
         <p>Desarrollado por <a href="https://github.com/roydev-dw" target="_blank"><strong>roydev-dw</strong></a></p>
       </div>
       <div class="cont-media">
