Consumo de API ok - manejo errores, notificaciones ok

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,6 +48,8 @@
 
   <h1 class="contenedor-construccion">Sección Contacto</h1>
 
+  <div id="mapa" style="height: 400px; width: 600px; text-align: center;"></div>
+
   <!-- Footer -->
 	<footer class="cont-footer">
     <div class="cont-links">
@@ -56,7 +58,7 @@
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="../pages/productos.html">Productos</a></li>
           <li><a href="../pages/servicios.html">Servicios</a></li>
-          <li><a href="../pages/contacto.html">Contacto</a></li>
+          <li><a href="../pages/contacto.html" class="active">Contacto</a></li>
         </ul>
       </div>
       <div class="cont-copy">
