--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <title>Confecciones, diseños únicos | Andreita Confecciones</title>
+  <!-- Animate css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <!-- Boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -36,7 +38,7 @@
         </ul>
       </div>
       <div class="cont-carrito">
-        <a href="">
+        <a href="#" aria-label="Ir al carrito de compras">
           <i id="icono-carrito" class="bi bi-cart-fill"></i>
           <span id="contador-carrito" class="contador-carrito">0</span>
         </a>
@@ -91,7 +93,6 @@
     </div>
   </section>
 
-
   <!-- Productos -->
   <section class="cont-productos" id="cont-productos">
     <div class="cont-productos-card" id="cont-productos-card">
@@ -105,7 +106,6 @@
         <h2>Carrito de compras</h2>
         <span id="cerrar-carrito" class="cerrar-carrito">&times;</span>
       </div>
-      
       <table class="tabla-carrito">
         <thead>
           <tr>
@@ -118,9 +118,8 @@
         </thead>
         <tbody class="items-carrito" id="items-carrito"></tbody>
       </table>
-      
       <p id="total">Total: $0</p>
-      <button id="verificar" class="verificar">Finalizar compra</button>
+      <button id="verificar" class="verificar">Continuar</button>
     </div>
   </section>
 
@@ -129,21 +128,6 @@
       <h2>Su compra a finalizado con exito</h2>
       <p>Esperamos verte pronto. Gracias por tu compra.</p>
       <button id="cerrar-compra">Cerrar</button>
-    </div>
-  </section>
-
-  <section id="modal-agregado-carrito" class="modal-agregado-carrito">
-    <div class="modal-contenido-carrito">
-      <i class="bi bi-check-circle-fill"></i>
-      <p>Agregado al carrito.</p>
-    </div>
-  </section>
-  
-
-  <section id="modal-suscripcion" class="modal-suscripcion">
-    <div class="modal-contenido">
-      <i class="bi bi-send-check-fill"></i>
-      <p>Suscripción exitosa.</p>
     </div>
   </section>
 
@@ -160,13 +144,8 @@
       </div>
       <div class="cont-copy">
         <p>&copy; 2024 Andreita confecciones. Todos los derechos reservados.</p>
-        <form action="" class="formulario-noticias">
-          <p>Recibe nuestro boletin informativo, con noticias, descuentos, tips y demás.</p>
-          <div class="cont-entrada">
-            <i class="bi bi-envelope-at-fill"></i>
-            <input type="email" name="" value="" placeholder="Ingresa tu correo electrónico" required>
-            <button type="submit" name="boton">Suscríbete</button>
-          </div>
+        <form action="" id="formulario-noticias" class="formulario-noticias">
+          <!-- Aquí se inyecta el formulario -->
         </form>
         <p>Desarrollado por <a href="https://github.com/roydev-dw" target="_blank"><strong>roydev-dw</strong></a></p>
       </div>
@@ -178,6 +157,7 @@
     </div>
 	</footer>
   
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="./js/main.js"></script>
 </body>
