--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,22 +15,26 @@
   <!-- Animate css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <!-- Boostrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- Estilos css -->
   <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
 
   <!-- Encabezado -->
-	<header>
-		<nav>
-			<div class="cont-logo">
-				<a href="./index.html">
-					<img src="./assets/logo/logo-andreita-confecciones.webp" title="Logo andreita confecciones" alt="Logotipo del emprendimiento andreita confecciones">
-				</a>
-			</div>
-			<div class="cont-menu">
+  <header>
+    <nav>
+      <div class="cont-logo">
+        <a href="./index.html">
+          <img src="./assets/logo/logo-andreita-confecciones.webp" title="Logo andreita confecciones"
+            alt="Logotipo del emprendimiento andreita confecciones">
+        </a>
+      </div>
+      <div class="cont-menu">
         <ul class="menu">
           <li><a href="./index.html" class="active">Inicio</a></li>
           <li><a href="./pages/productos.html">Productos</a></li>
@@ -48,19 +53,21 @@
           <span class="linea"></span>
         </button>
       </div>
-		</nav>
-	</header>
+    </nav>
+  </header>
 
   <!-- Oferta principal -->
   <section class="cont-principal">
     <div class="cont-producto">
       <div class="cont-img">
-        <img src="./assets/productos/delantal-flores.webp" title="Delantal con diseño tropical" alt="Delantal con diseño tropical">
+        <img src="./assets/productos/delantal-flores.webp" title="Delantal con diseño tropical"
+          alt="Delantal con diseño tropical">
       </div>
       <div class="cont-texto">
         <h1>Ofertas Especiales</h1>
         <p>¡Tu mejor aliado en la cocina!</p>
-        <p>Delantal jardín tropical. Estilo vibrante en tu cocina con este delantal lleno de colores vibrantes y un diseño único.</p>
+        <p>Delantal jardín tropical. Estilo vibrante en tu cocina con este delantal lleno de colores vibrantes y un
+          diseño único.</p>
         <a href="./index.html#cont-productos">Más información</a>
       </div>
     </div>
@@ -70,21 +77,24 @@
   <section class="cont-ofertas">
     <div class="cont-prod-oferta">
       <div class="cont-prod-img">
-        <img src="./assets/productos/scrunchies-dieciocheros.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
+        <img src="./assets/productos/scrunchies-dieciocheros.webp" title="Scrunchies con diseño dieciochero"
+          alt="Scrunchies con diseño dieciochero">
         <div>
           <h2>Scrunchies</h2>
           <a href="#">Más información</a>
         </div>
       </div>
       <div class="cont-prod-img">
-        <img src="./assets/productos/bandana-animalprint.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
+        <img src="./assets/productos/bandana-animalprint.webp" title="Scrunchies con diseño dieciochero"
+          alt="Scrunchies con diseño dieciochero">
         <div>
           <h2>Bandanas</h2>
           <a href="#">Más información</a>
         </div>
       </div>
       <div class="cont-prod-img">
-        <img src="./assets/productos/coquette-animalprint.webp" title="Scrunchies con diseño dieciochero" alt="Scrunchies con diseño dieciochero">
+        <img src="./assets/productos/coquette-animalprint.webp" title="Scrunchies con diseño dieciochero"
+          alt="Scrunchies con diseño dieciochero">
         <div>
           <h2>Coquettes</h2>
           <a href="#">Más información</a>
@@ -118,21 +128,15 @@
         </thead>
         <tbody class="items-carrito" id="items-carrito"></tbody>
       </table>
+      <p id="sub-total">Sub total: $0</p>
+      <p id="IVA">Precio IVA: $0</p>
       <p id="total">Total: $0</p>
-      <button id="verificar" class="verificar">Continuar</button>
-    </div>
-  </section>
-
-  <section id="modal-compra" class="modal-compra">
-    <div class="cont-compra">
-      <h2>Su compra a finalizado con exito</h2>
-      <p>Esperamos verte pronto. Gracias por tu compra.</p>
-      <button id="cerrar-compra">Cerrar</button>
+      <button id="boton-continuar" class="boton-continuar">Continuar</button>
     </div>
   </section>
 
   <!-- Footer -->
-	<footer class="cont-footer">
+  <footer class="cont-footer">
     <div class="cont-links">
       <div class="cont-paginas">
         <ul>
@@ -145,20 +149,23 @@
       <div class="cont-copy">
         <p>&copy; 2024 Andreita confecciones. Todos los derechos reservados.</p>
         <form action="" id="formulario-noticias" class="formulario-noticias">
-          <!-- Aquí se inyecta el formulario -->
+          <!-- Aquí se crea el formulario de forma dinámica -->
         </form>
         <p>Desarrollado por <a href="https://github.com/roydev-dw" target="_blank"><strong>roydev-dw</strong></a></p>
       </div>
       <div class="cont-media">
-        <a href="https://www.instagram.com/andreita.confecciones_/">Instagram</a>      
-        <a href="https://www.facebook.com/profile.php?id=100063741957314">Facebook</a>      
-        <a href="https://www.tiktok.com/@andreita.confecciones?_t=8ptPPDNYFDa&_r=1">TikTok</a>      
+        <a href="https://www.instagram.com/andreita.confecciones_/">Instagram</a>
+        <a href="https://www.facebook.com/profile.php?id=100063741957314">Facebook</a>
+        <a href="https://www.tiktok.com/@andreita.confecciones?_t=8ptPPDNYFDa&_r=1">TikTok</a>
       </div>
     </div>
-	</footer>
-  
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script src="./js/main.js"></script>
 </body>
+
 </html>
