mediaquery mobile ok

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <i id="icono-carrito" class="bi bi-cart-fill"></i>
           <span id="contador-carrito" class="contador-carrito">0</span>
         </a>
-        <button class="menu-burguer" aria-label="Abrir menú de navegación">
+        <button class="menu-burguer active" aria-label="Abrir menú de navegación">
           <span class="linea"></span>
           <span class="linea"></span>
           <span class="linea"></span>
@@ -57,7 +57,7 @@
   </header>
 
   <!-- Oferta principal -->
-  <section class="cont-principal">
+  <section class="cont-principal contenido">
     <div class="cont-producto">
       <div class="cont-img">
         <img src="./assets/productos/delantal-flores.webp" title="Delantal con diseño tropical"
@@ -146,12 +146,14 @@
           <li><a href="./pages/contacto.html">Contacto</a></li>
         </ul>
       </div>
-      <div class="cont-copy">
-        <p>&copy; 2024 Andreita confecciones. Todos los derechos reservados.</p>
-        <form action="" id="formulario-noticias" class="formulario-noticias">
-          <!-- Aquí se crea el formulario de forma dinámica -->
-        </form>
-        <p>Desarrollado por <a href="https://github.com/roydev-dw" target="_blank"><strong>roydev-dw</strong></a></p>
+      <div>
+        <div class="cont-copy">
+          <p>&copy; 2024 Andreita confecciones. Todos los derechos reservados.</p>
+          <form action="" id="formulario-noticias" class="formulario-noticias">
+            <!-- Aquí se crea el formulario de forma dinámica -->
+          </form>
+          <p>Desarrollado por <a href="https://github.com/roydev-dw" target="_blank"><strong>roydev-dw</strong></a></p>
+        </div>
       </div>
       <div class="cont-media">
         <a href="https://www.instagram.com/andreita.confecciones_/">Instagram</a>
